--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sunnyweather.android">
 
+<!--    本app通过网络接口搜索城市数据，必须添加访问网络的权限-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+<!--    name标签作用：在项目任何位置通过调用SunnyWeatherApplication.context获取Context对象-->
     <application
+        android:name=".SunnyWeatherApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
